--- a/assets/css/pages/login-soft.css
+++ b/assets/css/pages/login-soft.css
@@ -4,35 +4,39 @@ Login page
 
 /* logo page */
 .login {
-  background-color: #666 !important;
+  background-color: white !important;
   /*background-color: #1570a6 !important; */
-  
+
   /*background-color: #000000 !important; */
 
 }
 
 .login .logo {
-  margin: 0 auto;   
-  margin-top:60px;
+  margin: 0 auto;
+  margin-top: 60px;
   padding: 15px;
   text-align: center;
-}  
-
+}
 
 .login .content {
-  background: url(../../img/bg-white-lock.png) repeat;
+  /* background: url(../../img/bg-white-lock.png) repeat; */
+  background-color: white;
+  box-shadow: 0px 7px 14px -4px rgba(0,0,0,0.54);
+  -webkit-box-shadow: 0px 7px 14px -4px rgba(0,0,0,0.54);
+  -moz-box-shadow: 0px 7px 14px -4px rgba(0,0,0,0.54);
   width: 360px;
-  margin: 0 auto; 
+  margin: 0 auto;
   margin-bottom: 0px;
-  padding: 30px;  
-  padding-top: 20px;  
-  padding-bottom: 15px;  
+  padding: 30px;
+  padding-top: 20px;
+  padding-bottom: 15px;
 }
 
 .login .content h3 {
   color: #eee;
 }
-.login .content h4  {
+
+.login .content h4 {
   color: #eee;
 }
 
@@ -43,8 +47,8 @@ Login page
 
 .login .content .login-form,
 .login .content .forget-form {
-    padding: 0px;
-    margin: 0px;
+  padding: 0px;
+  margin: 0px;
 }
 
 .login .content .form-control {
@@ -62,6 +66,7 @@ Login page
 .login .content .form-title {
   font-weight: 300;
   margin-bottom: 25px;
+  color: black;
 }
 
 .login .content .form-actions {
@@ -82,7 +87,7 @@ Login page
   border: 0;
   margin-bottom: 0;
   padding-bottom: 20px;
-}  
+}
 
 .login .content .register-form .form-actions {
   border: 0;
@@ -120,12 +125,12 @@ Login page
   position: relative;
   color: #ccc;
   z-index: 1;
-  top:1px;
-  margin: 4px 4px 0px 3px; 
+  top: 1px;
+  margin: 4px 4px 0px 3px;
   width: 16px;
   height: 16px;
   font-size: 16px;
-  text-align: center; 
+  text-align: center;
 }
 
 .login .content .has-error .select2-container i {
@@ -143,22 +148,23 @@ Login page
 /* footer copyright */
 .login .copyright {
   text-align: center;
-  margin: 0 auto; 
+  margin: 0 auto;
   padding: 10px;
-  color: #eee;
+  color: black;
   font-size: 13px;
 }
 
 @media (max-width: 480px) {
+
   /***
   Login page
   ***/
   .login .logo {
-    margin-top:10px;
+    margin-top: 10px;
   }
 
   .login .content {
-    padding: 30px; 
+    padding: 30px;
     width: 222px;
   }
 
