--- a/assets/css/themes/light.css
+++ b/assets/css/themes/light.css
@@ -15,6 +15,7 @@ Page header
   filter: none !important;
   --background-image: none !important;
   background-color: #434343 !important;
+  border-bottom: 1px solid black;
   --background-color: #fafafa !important;
   
   --background-image: linear-gradient(75deg,#fafafa 7%, #b5b1b1 100%);
